--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*DS_Store
 # Logs
 logs
 *.log
@@ -128,3 +129,15 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+typechain-types
+
+# Hardhat files
+cache
+artifacts
+
