--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "hardhat": "^2.16.1"
+    "dotenv": "^16.3.1",
+    "hardhat": "^2.16.1",
+    "hardhat-deploy": "^0.11.34"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2"
