--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "@arbitrum/sdk": "^3.1.10",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "dotenv": "^16.3.1",
+    "ethers": "^5.1.2",
     "hardhat": "^2.16.1",
     "hardhat-deploy": "^0.11.34"
   },
